--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<body>
 		<ul>
 			<li class="game update">
-				<p>[01/01/19] - Nova versão 1.0.0.2 disponível!</p>
+				<p>[01/01/19] - Nova versao 1.0.0.2 disponivel!</p>
 			</li>
 		</ul>
 	</body>
